@@ -9,6 +9,7 @@
 	* bug273: fix so EDNS rdata is included in pkt to wire conversion.
 	* bug274: fix use of c++ keyword 'class' for RR class in the code.
 	* bug275: fix memory leak of packet edns rdata.
+	* Fix timeout procedure for TCP and AXFR on Solaris.
 
 1.6.1   2009-09-14
 	* --enable-gost : use the GOST algorithm (experimental).
